Ajax calls for available games component. CSS Changes for the columns in the available games component so that things align well. Also affected Game Feed since same type of table container. Kind of fixed the long scroll thing that was happening.

--- a/web/static/main.css
+++ b/web/static/main.css
@@ -275,10 +275,21 @@ Game Tables
     font-size:8pt;
     vertical-align: top;
  }
+.divFeedColumn4 {
+    float: left;
+    width: 27%;
+    height:100%;
+    display:block;
+    padding-right:1%;
+    padding-top: 15px;
+    text-align:right;
+    font-size:8pt;
+    vertical-align: top;
+}
 .column{
     background-color: #CCC;
-    padding-bottom: 1000px;
-    margin-bottom: -1000px;
+    padding-bottom: 100px;
+    margin-bottom: -100px;
 }
 /******************************************************************
 Game Feed Table Item Stylings
